Added ids to all card items, added Nap time featurettes.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -203,14 +203,14 @@
             <div class="card-body">
               <ul class="list-unstyled mt-2 mb-2">
                 <li><div><input type="checkbox" id="crib-checkbox"><span> </span><a href="#crib">Crib</a></div></li>
-                <li><div><input type="checkbox"> Crib mattress</div></li>
-                <li><div><input type="checkbox"> Waterproof crib pads x2</div></li>
-                <li><div><input type="checkbox"> Crib sheets</div></li>
-                <li><div><input type="checkbox"> Swaddle blanket</div></li>
-                <li><div><input type="checkbox"> Sleep sack</div></li>
-                <li><div><input type="checkbox"> Pacifier x2</div></li>
-                <li><div><input type="checkbox"> Bouncer or swing</div></li>
-                <li><div><input type="checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
+                <li><div><input type="checkbox" id="mattress-checkbox"><span> </span><a href="#mattress">Crib mattress</a></div></li>
+                <li><div><input type="checkbox" id="crib-pad-checkbox"><span> </span><a href="#mattress">Waterproof crib pads x2</a></div></li>
+                <li><div><input type="checkbox" id="sheets-checkbox"><span> </span><a href="#mattress">Crib sheets</a></div></li>
+                <li><div><input type="checkbox" id="swaddle-blanket-checkbox"><span> </span><a href="#swaddle-blanket">Swaddle blanket</a></div></li>
+                <li><div><input type="checkbox" id="sleep-sack-checkbox"><span> </span><a href="#sleep-sack">Sleep sack</a></div></li>
+                <li><div><input type="checkbox" id="pacifier-checkbox"><span> </span><a href="#pacifier">Pacifier x2</a></div></li>
+                <li><div><input type="checkbox" id="bouncer-checkbox"><span> </span><a href="#bouncer">Bouncer, rocker or swing</a></div></li>
+                <li><div><input type="checkbox" id="bassinet-checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
               </ul>
               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-bed.svg" height="64px" alt="Crib Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
@@ -223,15 +223,15 @@
             </div>
             <div class="card-body">
               <ul class="list-unstyled mt-2 mb-2">
-                <li><div><input type="checkbox"> Breast pump</div></li>
-                <li><div><input type="checkbox"> Set of extra bottles</div></li>
-                <li><div><input type="checkbox"> Bottles with preemie nipples x6</div></li>
-                <li><div><input type="checkbox"> Formula</div></li>
-                <li><div><input type="checkbox"> Sterilizer</div></li>
-                <li><div><input type="checkbox"> Baby bottle brush</div></li>
-                <li><div><input type="checkbox"> Dishwasher basket</div></li>
-                <li><div><input type="checkbox"> Burp clothes/receiving blankets</div></li>
-                <li><div><input type="checkbox"> Nipple cream</div></li>
+                <li><div><input type="checkbox" id="breast-pump-checkbox"><span> </span><a href="#breast-pump">Breast pump</a></div></li>
+                <li><div><input type="checkbox" id="pump-bottles-checkbox"><span> </span><a href="#pump-bottles">Set of extra bottles</a></div></li>
+                <li><div><input type="checkbox" id="bottles-checkbox"><span> </span><a href="#bottles">Bottles with preemie nipples x6</a></div></li>
+                <li><div><input type="checkbox" id="formula-checkbox"><span> </span><a href="#formula">Formula</a></div></li>
+                <li><div><input type="checkbox" id="sterilizer-checkbox"><span> </span><a href="#sterilizer">Sterilizer</a></div></li>
+                <li><div><input type="checkbox" id="brush-checkbox"><span> </span><a href="#brush">Baby bottle brush</a></div></li>
+                <li><div><input type="checkbox" id="basket-checkbox"><span> </span><a href="#basket">Dishwasher basket</a></div></li>
+                <li><div><input type="checkbox" id="burp-clothes-checkbox"><span> </span><a href="#burp-clothes">Burp clothes/receiving blankets</a></div></li>
+                <li><div><input type="checkbox" id="nipple-cream-checkbox"><span> </span><a href="#nipple-cream">Nipple cream</a></div></li>
               </ul>
               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-bottle.svg" height="64px" alt="Bottle Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
@@ -244,15 +244,15 @@
             </div>
             <div class="card-body">
               <ul class="list-unstyled mt-2 mb-2">
-                <li><div><input type="checkbox"> Changing pad</div></li>
-                <li><div><input type="checkbox"> Changing pad cover</div></li>
-                <li><div><input type="checkbox"> Waterproof pads</div></li>
-                <li><div><input type="checkbox"> Diapers - size Newborn</div></li>
-                <li><div><input type="checkbox"> Diapers - size 1</div></li>
-                <li><div><input type="checkbox"> Baby wipes</div></li>
-                <li><div><input type="checkbox"> <i> Optional: wipe holder</i></div></li>
-                <li><div><input type="checkbox"> Diaper rush ointment</div></li>
-                <li><div><input type="checkbox"> Diaper pail</div></li>
+                <li><div><input type="checkbox" id="changing-pad-checkbox"><span> </span><a href="#changing-pad">Changing pad</a></div></li>
+                <li><div><input type="checkbox" id="pad-cover-checkbox"><span> </span><a href="#pad-cover">Changing pad cover</a></div></li>
+                <li><div><input type="checkbox" id="waterproof-pads-checkbox"><span> </span><a href="#waterproof-pads">Waterproof pads</a></div></li>
+                <li><div><input type="checkbox" id="diapers-checkbox"><span> </span><a href="#diapers-newborn">Diapers - size Newborn</a></div></li>
+                <li><div><input type="checkbox" id="diapers-checkbox"><span> </span><a href="#diapers-1">Diapers - size 1</a></div></li>
+                <li><div><input type="checkbox" id="wipes-checkbox"><span> </span><a href="#wipes">Baby wipes</a></div></li>
+                <li><div><input type="checkbox" id="wipe-holder-checkbox"><span> </span><a href="#wipe-holder"><i> Optional: wipe holder</i></a></div></li>
+                <li><div><input type="checkbox" id="diaper-cream-checkbox"><span> </span><a href="#diaper-cream">Diaper rush ointment</a></div></li>
+                <li><div><input type="checkbox" id="diaper-pail-checkbox"><span> </span><a href="#diaper-pail">Diaper pail</a></div></li>
               </ul>
               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-diper-pants.svg" height="64px" alt="Diaper Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
@@ -544,13 +544,14 @@
 
       <div class="row featurette">
         <div class="col-lg-7 order-lg-2 mb-4">
-          <h2 class="featurette-heading">Alternative: <span class="text-muted">bassinet included</span></h2>
-          <p class="lead">One downside of Chicco Bravo Travel System is that it doesn’t come with a bassinet, which means that if you want to take your baby on a walk, she’ll have to stay in a somewhat upright position strapped to the seat for the whole time. Bassinet, on the opposite side, provides the comfort of the crib and your baby will lay down in it perfectly flat. I personally didn’t enjoy long walks for the first half a year of my baby’s life, so for my needs – such as shopping trips – Chicco Bravo worked just fine. My friend, however, spent hours pushing the stroller at the nearest waterfront park. Well, she was lucky to live near one, and then again that’s how her baby prefferd to sleep. Her family chose to invest into a more functional, more solid and definitely fancier option. The model offers a car seat, a bassinet and a carrier which will work with both of them.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">UPPAbaby Vista Stroller & MESA Car Seat Bundle:</span> $1,199.98, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/dp/B079B3TJFM', '_blank'); return false;">Check it up!</button>
+          <h2 class="featurette-heading"><span class="anchor-offset-2" id="swaddle-blanket"></span>Swaddle blanket: <span class="text-muted">noone gets out!</span></h2>
+          <p class="lead">You can’t leave a baby with a blanket unsupervised because of a suffocation risk, and therefore no blankets go into a crib. By blanket I mean a loose blanket. You can swaddle a baby though and I would highly encourage all new parents to at least give it a try. Swaddling is not only a great way to keep your baby warm, but also a great technique to comfort him and help him fall asleep. Babies are not used to moving their arms and legs freely, there was not much room for exercise in their mama’s belly. Being swaddled reminds them of the safe place and help them relax. If it’s a new concept to you, I highly recommend “The Happiest Baby on the Block” – a famous book by Dr. Harvey Karp. It has some great information about why babies cry, along with practical advice of what to do about it.</p>
+          <p class="lead">Back to blankets. Swaddling is a skill. If you won’t do it tight enough, the little one will loosen the fabric and wriggle his arms out, and that’s exactly what kept happening to me. Even with all the diagrams and YouTube videos, I somehow still failed to get it right. And that’s when I discovered swaddle blanket wraps. These come with self-fastening flaps that securely snuggle your baby in a safe swaddling sleep sack. You don't have to remember any swaddle techniques, and your baby won't be able to squirm out! A true lifesaver!</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Ziggy Baby Swaddle Blanket:</span> $21.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Swaddle-Blanket-Adjustable-Baby-Ziggy/dp/B01I1WGMJ6', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
-          <img src="../static/img/UppaBabyVistaBundle.jpg" class="img-fluid f-image-size" alt="Responsive image">
+          <img src="../static/img/ZiggyBabyBlanket.jpg" class="img-fluid f-image-size" alt="Ziggy Baby Blanket">
         </div>
       </div>
 
@@ -558,15 +559,46 @@
 
       <div class="row featurette">
         <div class="col-lg-7 mb-4">
-          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="travel-system"></span>Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
-          <p class="lead">One thing you absolutely have to bring to the birth center is a car seat, and while all infant car seats look very similar, the most convenient would be the one which comes with a travel system. It will include a base which you install in the back seat of your car, a car seat itself and a carrier which the car seat clicks in to. This allow to move your baby in and out of the car without having to wake her up! Absolute must have. The one I chose – Chicco Bravo – also transforms into a regular stroller which will carry your baby from ~6 month (that’s when they start sitting up) through toddler years. Good to know: you can purchase multiple car bases if you use more than one car. </p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Chicco Bravo Trio Travel System:</span> $<span class="price">379.99</span>, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Chicco-Bravo-Travel-System-Lilla/dp/B00MS9VTH4', '_blank'); return false;">Check it up!</button>
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="sleep-sack"></span>Sleep sack</h2>
+          <p class="lead">Sleep sack is an alternative to a swaddle blanket in a sense that you’re keeping the baby warm by adding an extra layer, and it’s safe. They come in cotton and fleece, and in a variety of colors and cure designs. They are a great buy for babies who don’t like being swaddled. Yes, some babies won’t let you keep them swaddled for the whole night and some won’t tolerate it at all.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Carter's Fleece Sleep Bag:</span> $9.00 with 50% off</span>, Carters.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.carters.com/carters-baby-girl-pajamas/V_17905810.html', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 text-center">
-          <img class="img-fluid f-image-size" src="../static/img/ChiccoBravo.jpg" alt="Chicco Bravo Trio Travel System">
+          <img class="img-fluid f-image-size" src="../static/img/CartersSleepBag.jpg" alt="Carter's Cloud Fleece Sleep Bag">
         </div>
-      </div>      
+      </div>
+      
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading"><span class="anchor-offset-2" id="pacifier"></span>Pacifier <span class="text-muted">yaaay or nay?</span></h2>
+          <p class="lead">If you’ve been researching baby stuff, you probably ran across at least a few articles advising against pacifiers. Typically these articles will emphasize that pacifiers might ruin your attempts to establish breastfeeding. The baby would prefer a pacifier over a breast or fail to develop a proper sucking technique. Personally, I thought this to be a valid point, so I waited ~3 weeks before introducing a pacifier. By that time our breastfeeding was at full speed, while my husband and I got so sleep-deprived, that we were ready to try anything to help our baby sleep longer stretches. It worked on several occasions, but overall our little one never developed a big love towards pacifiers. By the age of 6 months we got rid of them. Later I would meet parents of 2-3 year old’s who would complain how they can’t wean their kids from pacifiers. Being honest, it sort of made me feel good about ourselves. At the same time, remembering how little sleep we had, I know I would definitely try pacifiers again with my next baby.</p>
+          <p class="lead">Pacifiers have sizes. That makes sense. Babies grow, so older babies will need bigger pacifiers. They also come in different shapes, which you just have to keep trying until you find the one. One of the most popular brands for newborn babies is Philips Avent.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Philips Avent Soothie 0-3mth :</span> $3.78, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Philips-SCF190-01-Soothie-0-3mth/dp/B0045I6IAO/?th=1', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/PhilipsAventSoothie.jpg" class="img-fluid f-image-size" alt="Philips Avent Soothie 0-3mth Green">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="bouncer"></span>Bouncer, rocker or swing?</h2>
+          <p class="lead">These three devices do different things. A rocker is similar to adult's rocking chair. You push it by either using your hands or simply nudging it with your toe to initiate the rocking motion. A bouncer is a seat on a wire frame that allows it to spring up and down. And a swing swings back and forth. Swings are powered mechanically and are larger than a bouncer or a rocker. In general, baby swings cost more too.</p>
+          <p class="lead">They all, however, use the same idea of motion which babies like so much. This again goes back to their time in the womb where their world was constantly bouncing with mama’s movement. I’ve heard of kiddos who would strongly prefer one type of device over another, but my baby didn’t. We had both a bouncy seat and a swing, which worked great in a two story house! I mostly used them when my baby got sleepy during the day and needed a little help to drift off.</p>
+          <p class="lead">All swings, bouncers and rockers have weight limits, but expect the magic to be over before your baby reaches it. Babies loose interest in them at around 6 months when they learn a new skill - crawling.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Fisher-Price Snugabunny Cradle 'n Swing:</span> $141.10, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Fisher-Price-Snugabunny-Cradle-Swing-Technology/dp/B00IVNEGLW', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/FisherPriceSnugabunnySwing.jpg" alt="Fisher-Price Snugabunny Cradle 'n Swing">
+        </div>
+      </div>
 
       <hr class="featurette-divider">
 
