Added featurettes for Breast pump, Milk collection bottles and Dr Brown bottles.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -224,7 +224,7 @@
             <div class="card-body">
               <ul class="list-unstyled mt-2 mb-2">
                 <li><div><input type="checkbox" id="breast-pump-checkbox"><span> </span><a href="#breast-pump">Breast pump</a></div></li>
-                <li><div><input type="checkbox" id="pump-bottles-checkbox"><span> </span><a href="#pump-bottles">Set of extra bottles</a></div></li>
+                <li><div><input type="checkbox" id="pump-bottles-checkbox"><span> </span><a href="#pump-bottles">Milk collection bottles</a></div></li>
                 <li><div><input type="checkbox" id="bottles-checkbox"><span> </span><a href="#bottles">Bottles with preemie nipples x6</a></div></li>
                 <li><div><input type="checkbox" id="formula-checkbox"><span> </span><a href="#formula">Formula</a></div></li>
                 <li><div><input type="checkbox" id="sterilizer-checkbox"><span> </span><a href="#sterilizer">Sterilizer</a></div></li>
@@ -616,6 +616,68 @@
       </div>
 
       <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="breast-pump"></span>Breast pump: <span class="text-muted">just get it!</span></h2>
+          <p class="lead">It makes sense that whether to get a breast pump or not should depend on your thoughts on breast feeding vs formula feeding. You might have your heart set up one way or the other, but – and this is a big but! – you don’t know in advance how things will go. The beginning of my breast feeding was so painful and miserable, I’d never guess I end up doing it for the whole year, while actively pumping at work for 9 months of it. My friend, on the other hand, was excited to start breast feeding, but her little guy refused to take the breast. The baby is one year old now and turned out just as healthy. My advice? Make no plans, get a breast pump and be ready for whatever happens. Recent research highlights so many benefits of breast feeding for both baby and mama, it seems logical to at least give it a try. And if it won’t work for some reason, then it won’t work, but at least you tried.</p>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size mb-4" src="../static/img/MedelaBreastPump.jpg" alt="Pump in Style Advanced® Starter Set">
+        </div>
+      </div>
+        <div>
+          <p class="lead">Now that might not make sense if you’re unfamiliar with breast feeding, but the breast pump is not just for those days when you’re away from your child. You will likely find yourself pumping to stimulate the supply in the very first days, and to express extra milk to prevent engorging, and to maybe even store some extra. All these are very good reasons to get a hold of your breast pump in advance, not after the little one comes out. Many health insurances cover breast pumps now, so check with your provider about your options. Mine recommended Medela, which was covered 100% and it did the job just fine. Now, there are many-many accessories for this pump – from cleaning supplies to breastshields of different sizes. These all seem to be important, but since you don’t know how the breast feeding journey will turn out, hold off on buying any extra for now. The only thing which makes sense purchasing right away is a set of extra bottles, so that you don’t have to wash the two that come with a pump after every pumping session. As for other accessories, after returning to work I bought a hands-free bra (this is a must!) and borrowed one of my husband’s backpacks for carrying the pump around. That’s it!</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Pump in Style Advanced® Starter Set:</span> $0.00 with most insurances</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('http://www.medelabreastfeedingus.com/products/1006/pump-in-style-advanced-starter-set', '_blank'); return false;">Check it up!</button>
+        </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="pump-bottles"></span>Milk collection/storage bottles</span></h2>
+          <p class="lead">Most pumps come with two bottles which might seem enough for the beginning, but in reality washing them after every pumping session is a hustle. I had to purchase a set of 6 extra bottles almost right away and wish I did it earlier. Having extra bottles, you can use them not only for collecting milk, but also for a short-term storage and even for bottle-feeding – that is if you buy compatible nipples. About compatibility, before getting different brands always make sure that items you plan on buying will work with each other. Some things do, some don’t.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Medela Breast Milk Collection and Storage Bottles, 6 Pack:</span> $15.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Medela-Collection-Storage-Compatible-Dishwasher/dp/B00DB5F114', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/MedelaMilkCollectionBottles.jpg" class="img-fluid f-image-size" alt="Medela Breast Milk Collection and Storage Bottles, 6 Pack">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="bottles"></span>Bottles with preemie nipples</h2>
+          <p class="lead">If you already have a Medela breast pump and bottles, the easiest way would be to also purchase their nipples. This way milk can get from breast to baby in one bottle. You might not need any bottles at all, if your breastfeeding will do wonders and the baby will stay with you for the whole time. But again, this is something you don’t know, and we need to be prepared for all scenarios. If you won’t need bottles right away, you most likely will use them later.</p>
+          <p class="lead">As for the choice of bottles, I got Dr Brown. My lactation consultant spoke very highly of them. In particular they recommended Dr Brown’s preemie nipples which have a slow flow and are considered closest to breast feeding. This way the baby will learn how to feed from both breast and bottle without developing a strong preference. As my lactation consultant explained, breast feeding babies need to work hard for their food and they might loose interest in it if you introduce a fast-flow nipple too soon. I started relying on bottles early on when I went back to work in 3 months, but I also wanted to continue breastfeeding which is why it was important to me not to sabotage it with bottles.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Dr. Brown's Original Bottle, 4 Ounce, 4-Pack:</span> $19.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Dr-Browns-Original-Bottle-4-Pack/dp/B00CPC29YG', '_blank'); return false;">Check it up!</button>
+          <p class="lead on-one-line"><span class="font-weight-bold">Dr. Brown's Original Nipple, Preemie:</span> $10.04, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Dr-Browns-Original-Nipple-Preemie/dp/B015XBYDE4', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/DrBrownOriginalBottles.jpg" alt="Dr. Brown's Original Bottle, 4 Ounce, 4-Pack ">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="bassinet"></span>Optional: <span class="text-muted">co-sleeper bassinet</span></h2>
+          <p class="lead">Now many parents are not excited about the crib in the beginning, because it seems too big, too cold and too far away from their bed. There are all kinds of bassinets on the market, including so called bedside bassinets – those which are meant to be positioned right next to your bed for easy checking on the baby. The downside of any bassinet is that the baby will inevitably outgrow it in a next few months and will have to go back into the crib, so for me it felt like an unnecessary expense. I didn’t have a bassinet. My friend – on the contrary – did and she loved it! Their bassinet was designed for bed sharing – they placed it right on their bed between Mom and Dad. She said the baby was much happier sleeping next to them and with the C-section it was a huge relief to be able to take care of him without having to get up.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">SwaddleMe By Your Side Sleeper:</span> $45.38, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/SwaddleMeBassinet.jpg" class="img-fluid f-image-size" alt="SwaddleMe By Your Side Sleeper">
+
+        </div>
+      </div>
 
       <!-- /END THE FEATURETTES -->
 
