Added Lunch time featurettes.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -230,7 +230,7 @@
                 <li><div><input type="checkbox" id="sterilizer-checkbox"><span> </span><a href="#sterilizer">Sterilizer</a></div></li>
                 <li><div><input type="checkbox" id="brush-checkbox"><span> </span><a href="#brush">Baby bottle brush</a></div></li>
                 <li><div><input type="checkbox" id="basket-checkbox"><span> </span><a href="#basket">Dishwasher basket</a></div></li>
-                <li><div><input type="checkbox" id="burp-clothes-checkbox"><span> </span><a href="#burp-clothes">Burp clothes/receiving blankets</a></div></li>
+                <li><div><input type="checkbox" id="burp-clothes-checkbox"><span> </span><a href="#burp-cloths">Burp cloths/receiving blankets</a></div></li>
                 <li><div><input type="checkbox" id="nipple-cream-checkbox"><span> </span><a href="#nipple-cream">Nipple cream</a></div></li>
               </ul>
               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-bottle.svg" height="64px" alt="Bottle Icon">
@@ -668,16 +668,93 @@
 
       <div class="row featurette">
         <div class="col-lg-7 order-lg-2 mb-4">
-          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="bassinet"></span>Optional: <span class="text-muted">co-sleeper bassinet</span></h2>
-          <p class="lead">Now many parents are not excited about the crib in the beginning, because it seems too big, too cold and too far away from their bed. There are all kinds of bassinets on the market, including so called bedside bassinets – those which are meant to be positioned right next to your bed for easy checking on the baby. The downside of any bassinet is that the baby will inevitably outgrow it in a next few months and will have to go back into the crib, so for me it felt like an unnecessary expense. I didn’t have a bassinet. My friend – on the contrary – did and she loved it! Their bassinet was designed for bed sharing – they placed it right on their bed between Mom and Dad. She said the baby was much happier sleeping next to them and with the C-section it was a huge relief to be able to take care of him without having to get up.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">SwaddleMe By Your Side Sleeper:</span> $45.38, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="formula"></span>Formula</h2>
+          <p class="lead">Choosing a formula for your newborn is an important decision, and the more you plan on using formula, the more important it becomes. One of the safest, most nutritious and most difficult to get in the US is German brand Holle. If you will formula feeding exclusively, it’s a good idea to do your research and check what options are available to your family.</p>
+          <p class="lead">If you’re set on breastfeeding, having some formula around will give you confidence that come what may, your little one won’t be left hungry. In this case you don’t have to be picky. Enfamil and Similac are recommended by pediatricians and readily available in any grocery/department store. You don’t even have to buy it. If you register on Enfamil or Similac web-sites, they’ll send you a free sample box, along with their coupons, etc.</p>
+          <p class="lead">By the way, supplementing with formula is totally fine. Many moms will find it’s hard to maintain milk supply after returning to work. Supplementing ensures both healthy benefits of breastfeeding and having enough food to satisfy your baby’s hunger.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Similac Pro-Advance Non-GMO Infant Formula:</span> $28.98, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Similac-Pro-Advance-Non-GMO-Formula-Support/dp/B01KQ9DNV2', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
-          <img src="../static/img/SwaddleMeBassinet.jpg" class="img-fluid f-image-size" alt="SwaddleMe By Your Side Sleeper">
+          <img src="../static/img/SimilacProAdvance.png" class="img-fluid f-image-size" alt="Similac Pro-Advance Non-GMO Infant Formula with Iron, with 2'-FL HMO, for Immune Support, Baby Formula, Powder, 23.2 Ounce">
 
         </div>
       </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="sterilizer"></span>Microwave Sterilizer</h2>
+          <p class="lead">Sterilizers uses steam to kill bacteria on baby feeding supplies, such as bottles, nipples, pacifiers, teethers, as well as breast pump accessories. Whether to use a sterilizer at all is up to you, but many families choose to sterilize these items for at least the very beginning of their baby’s life when her immune system is still weak.</p>
+          <p class="lead">There are two types of sterilizers – microwave and electric. I decided on a microwave one, because I didn’t do that much sterilizing. I mostly used it when I had to hand wash items (those washed in a dishwasher seemed clean enough) and only during the first 3-6 months of my daughter’s life. Additionally, many reviews mentioned rust type residue on electric ones.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Munchkin Steam Guard Microwave Sterilizer:</span> $19.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Munchkin-Steam-Guard-Microwave-Sterilizer/dp/B000V9DXGS', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/MunchkinMicrowaveSterilizer.jpg" alt="Munchkin Steam Guard Microwave Sterilizer">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="brush"></span>Bottle brush</h2>
+          <p class="lead">A must-have to go with your purchase of bottles. There are plenty available, but I picked OXO because it includes a stand to ensure both your brush and your countertop will stay neat and dry. It also looked sturdier than some other brands.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">OXO Tot Bottle Brush:</span> $6.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B0771FFWQ2', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/OXOTotBottleBrush.jpg" class="img-fluid f-image-size" alt="OXO Tot Bottle Brush with Nipple Cleaner and Stand">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="basket"></span>Dishwasher Basket</h2>
+          <p class="lead">OXO also makes cute little dishwasher baskets for bottle parts and accessories which proved to be super useful. Without it you’re guaranteed spending tons of precious time searching for nipples and straws on the bottom of your dishwasher.  The doors of the basket hold up to 8 bottle nipples, which is a good amount. And you can always use it for bob baby-related items as well!</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Munchkin Steam Guard Microwave Sterilizer:</span> $19.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B0771FFJ21', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/OXOTotDishwasherBasket.jpg" alt="OXO Tot Dishwasher Basket for Bottle Parts & Accessories, Teal">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="burp-cloths"></span>Burp cloths... any kind of cloths!</h2>
+          <p class="lead">Under construction.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Simple Joys by Carter's 7-Pack Flannel Receiving Blankets:</span> $15.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Simple-Joys-Carters-Receiving-Blankets/dp/B01M8QG62K', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/SimpleJoys7-PackReceivingBlankets.jpg" class="img-fluid f-image-size" alt="Simple Joys by Carter's Baby Girls' 7-Pack Flannel Receiving Blankets">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="nipple-cream"></span>Nipple cream</h2>
+          <p class="lead">Under construction.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Motherlove Nipple Cream:</span> $10.95, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Motherlove-Certified-Organic-Cracked-Nursing/dp/B0007CQ726', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/MotherloveNippleCream.jpg" alt="Motherlove Nipple Cream 1 oz">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
 
       <!-- /END THE FEATURETTES -->
 
